# shdel

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.spdx  README.md  cliff.toml  shdel.sh
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  bug_report.md  feature_request.md
.github/workflows/: audit.yml  build.yml  cd.yml  ci.yml  cli-test.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
config/: cliff.toml
core_app/: Cargo.toml
scripts/: install.sh  release.sh  remove.sh
scripts/local/: install-x86_64-apple-darwin.sh  install-x86_64-linux-gnu.sh  install-x86_64_apple.sh  install-x86_64_linux.sh
scripts/term/: shdel.ps1
site/: index.html  ps.html  sh.html
src/: bash.rs  main.rs  zsh.rs
src/shell/: bash.rs  fish.rs  zsh.rs
src/shells/: bash.rs  fish.rs  zsh.rs
src/xcore/: bash.rs  fish.rs  mod.rs  zsh.rs
ui/: Cargo.toml
ui/src/: app_ui.rs  main.rs  style.rs
xcore/: Cargo.toml
xcore/src/: bash.rs  zsh.rs
