[package]
name = "shdel"
version = "0.0.0"
description = "Delete data from shell history files."
authors = ["xTekC"]
repository = "https://github.com/xTekC/shdel"
readme = "README.md"
homepage = "https://github.com/xTekC/shdel"
documentation = "https://github.com/xTekC/shdel/blob/main/README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "async"]
# default-run = "shdel -h"
publish = false
# include = "[...]"
# exclude = "[...]"
# workspace = "..."
# links = "..."
# build = "build.rs"
rust-version = "1.73.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "shdel"
path = "src/bin/main.rs"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.4.6", features = ["derive"] }
pico-args = "0.5.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }

# [dev-dependencies]


# [build-dependencies]


[profile.rel-opt]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
